add ray, remove publisher name

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = "hatchling.build"
 [project]
 name = "pytorchexample"
 version = "1.0.0"
-description = "Federated Learning with PyTorch and Flower (Quickstart Example)"
+description = "Federated Learning with PyTorch and Flower"
 license = "Apache-2.0"
 dependencies = [
     "flwr[simulation]>=1.14.0",
@@ -13,13 +13,14 @@ dependencies = [
     "torch>=2.2.1",
     "torchvision>=0.17.1",
     "psutil>=6.1.1",
+    "ray>=2.40.0",
 ]
 
 [tool.hatch.build.targets.wheel]
 packages = ["."]
 
 [tool.flwr.app]
-publisher = "flwrlabs"
+publisher = "<unknown>"
 
 [tool.flwr.app.components]
 serverapp = "pytorchexample.server_app:app"
