--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [project]
-name = "pytorchexample"
+name = "quickstart-pytorch"
 version = "1.0.0"
 description = "Federated Learning with PyTorch and Flower"
 license = "Apache-2.0"
@@ -42,5 +42,5 @@ options.num-supernodes = 10
 
 [tool.flwr.federations.local-simulation-gpu]
 options.num-supernodes = 10
-options.backend.client-resources.num-cpus = 2 # each ClientApp assumes to use 2CPUs
+options.backend.client-resources.num-cpus = 2   # each ClientApp assumes to use 2CPUs
 options.backend.client-resources.num-gpus = 0.2 # at most 5 ClientApp will run in a given GPU
